--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
         <ul>
             <button class="btn"><li><a href="index.html">HOME</a></li></button>
             <button class="btn"><li><a href="gallery.html">GALLERY</a></li></button>
-            <button class="btn"><li><a href="videos.html">VIDEOS</a></li></button>
+            <button class="btn"><li><a href="video.html">VIDEOS</a></li></button>
         </ul>
     </div>
 <body>
