--- a/video.html
+++ b/video.html
@@ -66,5 +66,11 @@
         </footer>
     </div>
 
+         <ul>
+            <button class="btn"><li><a href="index.html">HOME</a></li></button>
+            <button class="btn"><li><a href="gallery.html">GALLERY</a></li></button>
+            <button class="btn"><li><a href="video.html">VIDEOS</a></li></button>
+        </ul>
+
 </body>
 </html>
